// Copyright 2026 Cofide Limited.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package proto.connect.trust_zone_server_service.v1alpha1;

import "proto/trust_zone_server/v1alpha1/trust_zone_server.proto";

option go_package = "github.com/cofide/cofide-api-sdk/gen/go/proto/connect/trust_zone_server_service/v1alpha1";

// TrustZoneServerService manages TrustZoneServers.
service TrustZoneServerService {
  // Create a TrustZoneServer for the given trust zone in the specified cluster.
  // In the submitted resource the ID should not be set and generated by the server API.
  rpc CreateTrustZoneServer(CreateTrustZoneServerRequest) returns (CreateTrustZoneServerResponse) {}
  // Destroy a TrustZoneServer.
  // For managed TrustZoneServers this should soft delete the API resource until the managed server is deprovisioned.
  rpc DestroyTrustZoneServer(DestroyTrustZoneServerRequest) returns (DestroyTrustZoneServerResponse) {}
  // Get a TrustZoneServer by ID.
  rpc GetTrustZoneServer(GetTrustZoneServerRequest) returns (GetTrustZoneServerResponse) {}
  // List TrustZoneServers.
  rpc ListTrustZoneServers(ListTrustZoneServersRequest) returns (ListTrustZoneServersResponse) {}
  // Update a TrustZoneServer.
  // Server implementations may prevent some fields from being updated.
  rpc UpdateTrustZoneServer(UpdateTrustZoneServerRequest) returns (UpdateTrustZoneServerResponse) {}
}

message CreateTrustZoneServerRequest {
  proto.trust_zone_server.v1alpha1.TrustZoneServer trust_zone_server = 1;
}

message CreateTrustZoneServerResponse {
  proto.trust_zone_server.v1alpha1.TrustZoneServer trust_zone_server = 1;
}

message DestroyTrustZoneServerRequest {
  optional string trust_zone_server_id = 1;
}

message DestroyTrustZoneServerResponse {}

message GetTrustZoneServerRequest {
  optional string trust_zone_server_id = 1;
}

message GetTrustZoneServerResponse {
  optional proto.trust_zone_server.v1alpha1.TrustZoneServer trust_zone_server = 1;
}

message ListTrustZoneServersRequest {
  message Filter {
    string trust_zone_id = 1;
    string cluster_id = 2;
  }
  optional Filter filter = 1;
}

message ListTrustZoneServersResponse {
  repeated proto.trust_zone_server.v1alpha1.TrustZoneServer trust_zone_servers = 1;
}

message UpdateTrustZoneServerRequest {
  proto.trust_zone_server.v1alpha1.TrustZoneServer trust_zone_server = 1;
}

message UpdateTrustZoneServerResponse {
  proto.trust_zone_server.v1alpha1.TrustZoneServer trust_zone_server = 1;
}
